--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,10 +3,10 @@ name: Run tests and package firmware
 on:
   push:
     branches:
-      - '2.6'
-      - '2.7'
-      - '2.8'
-      - 'main'
+      # - '2.6'
+      # - '2.7'
+      # - '2.8'
+      # - 'main'
       - boxer_oled
     tags:
       - v*
@@ -86,57 +86,57 @@ jobs:
           ./tools/commit-tests.sh
 
 
-  # build:
-  #   name: Run builds
-  #   needs: test
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       target:
-  #         - nv14
-  #         - t12
-  #         - t16
-  #         - t18
-  #         - t8;zorro;commando8
-  #         - tlite;tlitef4;tpro;tprov2;lr3pro
-  #         - t20
-  #         - tx12;tx12mk2;boxer
-  #         - tx16s
-  #         - x10;x10-access
-  #         - x12s
-  #         - x7;x7-access
-  #         - x9d;x9dp;x9dp2019
-  #         - x9e;x9e-hall
-  #         - x9lite;x9lites
-  #         - xlite;xlites
-  #   container:
-  #     image: ghcr.io/edgetx/edgetx-dev:latest
-  #     volumes:
-  #       - ${{ github.workspace }}:/src
-  #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v3
-  #       with:
-  #         submodules: recursive
+  build:
+    name: Run builds
+    needs: test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          # - nv14
+          # - t12
+          # - t16
+          # - t18
+          # - t8;zorro;commando8
+          # - tlite;tlitef4;tpro;tprov2;lr3pro
+          # - t20
+          - tx12;tx12mk2;boxer
+          # - tx16s
+          # - x10;x10-access
+          # - x12s
+          # - x7;x7-access
+          # - x9d;x9dp;x9dp2019
+          # - x9e;x9e-hall
+          # - x9lite;x9lites
+          # - xlite;xlites
+    container:
+      image: ghcr.io/edgetx/edgetx-dev:latest
+      volumes:
+        - ${{ github.workspace }}:/src
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
-  #     - name: Build ${{ matrix.target }}
-  #       env:
-  #         FLAVOR: ${{ matrix.target }}
-  #       run: |
-  #         echo "Running firmware build"
-  #         ./tools/build-gh.sh
+      - name: Build ${{ matrix.target }}
+        env:
+          FLAVOR: ${{ matrix.target }}
+        run: |
+          echo "Running firmware build"
+          ./tools/build-gh.sh
 
-  #     - name: Compose release filename
-  #       # https://stackoverflow.com/questions/58033366/how-to-get-current-branch-within-github-actions
-  #       run: echo "artifact_name=edgetx-firmware-${GITHUB_REF##*/}" >> $GITHUB_ENV
+      - name: Compose release filename
+        # https://stackoverflow.com/questions/58033366/how-to-get-current-branch-within-github-actions
+        run: echo "artifact_name=edgetx-firmware-${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-  #     - name: Package firmware ${{ matrix.target }}
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: "${{ env.artifact_name }}"
-  #         path: |
-  #           fw.json
-  #           LICENSE
-  #           *.bin
-  #         retention-days: 15
-  #         if-no-files-found: error
+      - name: Package firmware ${{ matrix.target }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: "${{ env.artifact_name }}"
+          path: |
+            fw.json
+            LICENSE
+            *.bin
+          retention-days: 15
+          if-no-files-found: error
